# Stellar-Hacktahons

./: DEPLOYMENT.md  IMPLEMENTATION.md  README.md
blockhire/: .gitignore  BLOCKCHAIN_INTEGRATION.md  README.md  README_FINAL.md  TESTING_GUIDE.md  package-lock.json  package.json
blockhire-backend/: package-lock.json  package.json
blockhire-backend/app/: globals.css  layout.tsx  page.tsx
blockhire-backend/app/api/interviews/: route.ts
blockhire-backend/app/dashboard/: layout.tsx
blockhire-backend/app/login/: page.tsx
blockhire-backend/components/: UploadResume.tsx  WalletButton.tsx
blockhire-backend/components/dashboard/: header.tsx
blockhire-backend/lib/: wallet.ts
blockhire-contracts/: Cargo.toml  README.md  deploy.sh
blockhire-contracts/candidate-profile/: Cargo.toml
blockhire-contracts/candidate-profile/src/: lib.rs
blockhire-contracts/document-verification/: Cargo.toml
blockhire-contracts/document-verification/src/: lib.rs
blockhire-contracts/job-application/: Cargo.toml
blockhire-contracts/job-application/src/: lib.rs
blockhire/app/: layout.tsx
blockhire/app/dashboard/: layout.tsx
blockhire/app/login/: page.tsx
blockhire/backend/: README.md  package-lock.json  package.json  server.js
blockhire/blockhire-mvp/lib/: sorobanClient.ts
blockhire/components/: DashboardHeader.tsx  TxViewer.tsx  WalletButton.tsx
blockhire/components/dashboard/: header.tsx  sidebar.tsx
blockhire/contexts/: WalletContext.tsx
blockhire/contracts/: Cargo.toml
blockhire/contracts/src/: lib.rs
blockhire/lib/: contracts.ts  mock-data.ts  wallet.ts
(+20 files in other folders)
