[workspace]
resolver = "2"
members = [
    "candidate-profile",
    "document-verification",
    "job-application"
]

[workspace.dependencies]
soroban-sdk = "21.7.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
